# plinth-starter

./: .gitignore  Makefile  README.md  cabal.project  flake.nix  smartcontracts.cabal
app/: GenBlueprint.hs
blueprints/: .gitkeep
src/: Validator.hs
